# indexed_array

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  cmake.yml
cmake_modules/: FindSphinx.cmake
doc/: advancedusage.rst  bitset.rst  comparison.csv  comparison.rst  defaultindexer.rst  design.rst  extensions.rst  index.rst  indexedarray.rst  indexedarray_constructors.rst  indexedarray_dataaccess.rst  indexedarray_iterators.rst  indexedarray_observers.rst  indexedbitset.rst  indexedbitset_constructors.rst  indexedbitset_dataaccess.rst  indexedbitset_observers.rst  indexedspan.rst  indexedspan_constructors.rst  indexedspan_dataaccess.rst  indexedspan_iterators.rst  indexedspan_observers.rst  introduction.rst  multidimensional.rst  performance.rst  reference.rst  safeinitialization.rst  tutorial.rst  usecases.rst
docs/: advancedusage.md  basic_usage.md  basicusage.md  bitset.md  comparison.md  customindexer.md  design.md  extensions.md  index.md  introduction.md  multidimensional.md  performance.md  reference.md  safeinitialization.md  tutorial.md  usecases.md
include/: indexed_array.hpp
include/detail/: checked_arg.hpp  default_indexer.hpp  describe.hpp  foreach.hpp  has_member_index.hpp  indexed_array.hpp  indexed_span.hpp  is_contiguous.hpp  magic_enum.hpp  union_of.hpp  value_sequence.hpp  wise_enum.hpp
include/jbc/: indexed_array.hpp
include/jbc/indexed_array/: describe.hpp  magic_enum.hpp  reflection.hpp  safe_numerics.hpp  wise_enum.hpp
include/jbc/indexed_array/detail/: checked_arg.hpp  default_indexer.hpp  foreach.hpp  index_range.hpp  indexed_array.hpp  indexed_bitset.hpp  indexed_span.hpp  is_contiguous.hpp  is_indexer.hpp  lambda_indexer.hpp  list_indexer.hpp  union_of.hpp
perf/: t.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  tenum.cpp
sphinx_conf/: conf.py
tests/: CMakeLists.txt  array_initialization.cpp  array_iteration.cpp  array_operations.cpp  chrono.cpp  copy_operations.cpp  foreach.cpp  indexed_bitset.cpp  indexed_span.cpp  indexer.cpp  interval_enums.cpp  interval_ints.cpp  lambda_indexer.cpp  list_indexer.cpp  magic_enum.cpp  multidimensional.cpp  non_default_constructible.cpp  safe_initialization.cpp  safe_numerics.cpp  sequence_index.cpp  triviality.cpp  wise_enum.cpp
